--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Portfolio of Mallory Joy</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div class="nav-container">
             <nav role="main">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">About</a></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Get in Touch </a></li></a></li>
