--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Portfolio of Mallory Joy</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="shortcut icon" type="image/jpg" href="/favicon.jpg"/>
 </head>
 <body>
     
