--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav role="main">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Get in Touch </a></li></a></li>
                 </ul>
