Optimized Mobile View at and below 600px width

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="headerblock">Hello, there!</a>
     </header>
     <div class="nav-container">
-            <nav role="main">
+            <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -25,21 +25,20 @@
     <div class="main-content">
         <h1 class="myname">MALLORY JOY </h1>
         <h3>EST. 1994</h3>
-        <div class ="homepagenav">
-            <a class="button" href="tel:5617970215">Call Me</a>
-            <a class="button" href="mailto:malloryjoy13@gmail.com">Email Me</a>
-            <a class="button" href="https://www.maljoylove.com">My Blog</a>   
-        </div>
+        <a class="button" href="tel:5617970215">Call Me</a>
+        <a class="button" href="mailto:malloryjoy13@gmail.com">Email Me</a>
+        <a class="button" href="https://www.maljoylove.com">My Blog</a>   
+        
        
     </div>
     <footer>
     <hr />
     <div class="footer">
         <nav class="footernav">
-            <ul class="ul-footer">
+            <ul>
                 <li><a class="footer" href="">Portfolio      </a>  | </li>
                 <li><a class="footer" href=""> Contact       </a>  | </li>
-                <li><a class="footer" href=""> Sitemap       </a>  | </li>
+                <li><a class="footer" href=""> Sitemap       </a></li>
             </ul>
         </nav>
     </div>
