Revised CSS, added contact and portfolio page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="">Get in Touch </a></li></a></li>
                 </ul>
             </nav>
@@ -25,10 +25,10 @@
     <div class="main-content">
         <h1 class="myname">MALLORY JOY </h1>
         <h3>EST. 1994</h3>
-        <a class="button" href="tel:5617970215">Call Me</a>
-        <a class="button" href="mailto:malloryjoy13@gmail.com">Email Me</a>
-        <a class="button" href="https://www.maljoylove.com">My Blog</a>   
-        
+        <nav id="main">
+        <a class="button" href="portfolio.html">My Portfolio</a>
+        <a class="button" href="https://www.maljoylove.com">Personal Blog</a>   
+        </nav>
        
     </div>
     <footer>
