Completely overhaul site

--- a/About.html
+++ b/About.html
@@ -16,15 +16,14 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Get in Touch </a></li></a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Get in Touch </a></li></a></li>
             </ul>
         </nav>
 </div>
     <h1 style="text-align: center;">About Me</h1>
-    <blockquote style="text-align: center;"><em>I think as a company, if you can get those two things right — having a clear direction on what you are trying to do <br />
-        and bringing in great people who can execute on the stuff — then you can do pretty well. </em><br />
-        – Mark Zuckerberg, CEO of Facebook
+    <blockquote style="text-align: center;"><em>Whether you think you can, or you think you can't... you're right. </em><br />
+        – Henry Ford
     </blockquote>
     <section id="about-main">
     <p>When I was seven years old, I stood in the corner of my family living room, bouncing on my heels as 
@@ -50,15 +49,6 @@
     </section>
     <footer>
         <hr />
-        <div class="footer">
-            <nav class="footernav">
-                <ul class="ul-footer">
-                    <li><a class="footer" href="">Portfolio      </a>  | </li>
-                    <li><a class="footer" href=""> Contact       </a>  | </li>
-                    <li><a class="footer" href=""> Sitemap       </a>  | </li>
-                </ul>
-            </nav>
-        </div>
         <h2 style="text-align: center;">Copyright 2021. A Mallory Joy Development.</h2>
         </footer>
 
