--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
     <section id="getintouch">
         <form id="contact-form" method="post" action="contact.html" role="form">
                 <label for="form_name">First Name *</label>
-                    <input id="form_name" type="text" name="name" placeholder="Please enter your firstname *" required
+                    <input id="form_name" type="text" name="name" placeholder="Please enter your first name *" required
                                 data-error="Firstname is required.">
                             <div class="help-block with-errors"></div>
                         </div>
                 <label for="form_lastname">Last name *</label>
-                            <input id="form_lastname" type="text" name="surname" placeholder="Please enter your lastname *" required
+                            <input id="form_lastname" type="text" name="surname" placeholder="Please enter your last name *" required
                                 data-error="Lastname is required.">
                             <div class="help-block with-errors"></div>
                 <label for="form_email">Email *</label>
@@ -60,4 +60,8 @@
 
 
     </section>
+    <footer>
+        <hr />
+        <h2 style="text-align: center;">Copyright 2021. A Mallory Joy Development.</h2>
+        </footer>
 </body>
