--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Get in Touch </a></li>
+                <li><a href="contact.html">Get in Touch </a></li></a></li>
             </ul>
         </nav>
     </div>
@@ -39,8 +39,8 @@
           </div>
         </div>
         <div class="project-tile">
-          <h3>Personal DJ </h3>
-          <p>Step 1: Tell us your mood. <br /> Step 2: Open our curated playlists. <br />Step 3: Dance it out. </p>
+          <h3>A Perfect Puzzle </h3>
+          <p>What do you think it's gonna look like when it's all put together? Yup, that's a wolf sanctuary, all right! </p>
    <div id="project-links">
             <a class="btn" href="#">View Project</a><a class="btn-right" href="#">View GitHub</a>
           </div>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="project-tile">
-          <h3>Disney Do's and Don'ts</h3>
+          <h3>Puzzle</h3>
           <p>Family trip? Bachelorette Party? Proposal? This application will help you plan an adventure you'll always remember.  </p>
           <div id="project-links">
             <a class="btn" href="#">View Project</a><a class="btn-right" href="#">View GitHub</a>
@@ -71,4 +71,8 @@
         <p style="text-align: center;"><a class="button" id="profile-link" href="https://github.com/malloryjoy" target="_blank">View Full Portfolio</a></p>
          <p>&nbsp; </p>
     </section>
+    <footer>
+        <hr />
+        <h2 style="text-align: center;">Copyright 2021. A Mallory Joy Development.</h2>
+        </footer>
 </body>
