Did: New Font, update pages, create contact page

--- a/UXPortfolio.html
+++ b/UXPortfolio.html
@@ -13,14 +13,14 @@
         <a href="https://www.malloryjoy.dev"></a>
     </header>
     <div id="wraplife">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="UXPortfolio.html">UX Portfolio</a></li>
-                    <li><a href="portfolio.html">Coding Portfolio</a></li>
-                    <li><a href="contact.html">Contact Me </a></li></a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="UXPortfolio.html">UX Portfolio</a></li>
+                <li><a href="CodingPortfolio.html">Coding Portfolio</a></li>
+                <li><a href="contact.html">Contact Me </a></li></a></li>
+            </ul>
+        </nav>
     
     <div class="main-content portfolio">
         <div class="ux-port"><a href="">USER INTERFACE COPY</a></div>
