Modified for mobile view, changed some colors

--- a/CodingPortfolio.html
+++ b/CodingPortfolio.html
@@ -26,7 +26,7 @@
             <div class="main-content codeport">
                 <div class="code-port"><a href="">Javascript</a></div>
                 <div class="code-port"><a href="">Python</a></div>
-                <div class="code-port"><a href="">C++</a></div>
+                <div class="code-port"><a href="">SQL</a></div>
             </div>
             </div>
         </div>
