--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         </nav>
     
     <div class="main-content">
+        <h1>Let's Talk!</h1>
         <h3 style="text-align: left;"><a href="mailto:malloryjoy13@gmail.com"><i class="fas fa-envelope-open-text"></i>Email Me</a></h3>
         <h3 style="text-align: left;"><a href="tel:5617970215"><i class="fas fa-mobile-alt"></i>Call Me</a></h3>
         <h3 style="text-align: left"><a href=""><i class="fas fa-file-download"></i>Download My Resume</a></h3>
