--- a/CodingPortfolio.html
+++ b/CodingPortfolio.html
@@ -24,9 +24,50 @@
             </nav>
     
             <div class="main-content codeport">
-                <div class="code-port"><a href="">Javascript</a></div>
-                <div class="code-port"><a href="">Python</a></div>
-                <div class="code-port"><a href="">SQL</a></div>
+                <div class="code-port">
+                    <a href="">Sitcom Soulmates</a>
+                    <p>Looking for love? This personality quiz matches you with modern sitcom characters that would totally be "your person". <br /> 
+                        Looking for a best friend? This quiz does that, too. <br />
+                        <strong>Built With:</strong> HTML/CSS/Javascript 
+                    </p>
+                    <div class="dasbuttons">
+                        <a class="button" href="#">View Project </a>
+                        <a class="button" href="#">View GitHub</a>
+                        <a class="button" href="#">View ReadMe</a>
+                    </div>
+                </div>
+                <div class="code-port"><a href="">iBod</a>
+                    <p>Inspired by the 75Hard Challenge, this random generator will tell you how you'll work out today. Get ready, get set, go get 'em! <br />
+                        <strong>Built With:</strong> HTML/CSS with Bootstrap/Python 
+                    </p>
+                    <div class="dasbuttons">
+                        <a class="button" href="#">View Project </a>
+                        <a class="button" href="#">View GitHub</a>
+                        <a class="button" href="#">View ReadMe</a>
+                    </div>
+                
+                </div>
+                <div class="code-port"><a href="">Style Assistant</a>
+                    <p>Have you ever watched a TV show and wished you could dress like one of the characters? This style guide will get you on the right track for your next wardrobe update!<br />
+                        <strong>Languages Used:</strong> HTML/CSS with Bootstrap/React.js
+                    </p>
+                    <div class="dasbuttons">
+                        <a class="button" href="#">View Project </a>
+                        <a class="button" href="#">View GitHub</a>
+                        <a class="button" href="#">View ReadMe</a>
+                    </div>
+                </div>
+                <div class="code-port"><a href="">You've Never Seen It?</a>
+                    <p>Every year, critics and film enthusiasts across the globe collaborate on a list of what films of the year deserve a place on the list of "1001 Movies to See Before You Die." Wondering if your favorite movie 
+                        made the cut as "essential"? Search for it here! <br />
+                        <strong>Languages Used:</strong> HTML/CSS with Bootstrap/SQL/Javascript
+                    </p>
+                    <div class="dasbuttons">
+                        <a class="button" href="#">View Project </a>
+                        <a class="button" href="#">View GitHub</a>
+                        <a class="button" href="#">View ReadMe</a>
+                    </div>
+                </div>
             </div>
             </div>
         </div>
