Updated the colour

--- a/index2.html
+++ b/index2.html
@@ -66,8 +66,9 @@
                             <h3 class="mb-0">Sitcom Soulmates</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Javascript</div>
                             <p>Looking for love? This personality quiz will tell you just where to find it.... on your favorite streaming platform. Looking for a best friend? This quiz does that, too!</p>
+                        <a class="button" href="#">Launch Project</a> <a class="button" href="#">View ReadMe</a> <a class="button" href="#">View GitHub</a>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -75,7 +76,6 @@
                             <div class="subheading mb-3">Uses HTML, CSS, and Python </div>
                             <p>Inspired by the 75Hard Challenge, this random generator will tell you how you'll work out today. Get ready, get set, go get 'em! </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -83,7 +83,6 @@
                             <div class="subheading mb-3">Uses HTML, CSS, and React.js</div>
                             <p>Have you ever watched a TV show and wished you could dress like one of the characters? This style guide will get you on the right track for your next wardrobe update!</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -92,7 +91,6 @@
                             <p>Every year, critics and film enthusiasts across the globe collaborate on a list of what films of the year deserve a place on the list of "1001 Movies to See Before You Die." Wondering if your favorite movie 
                                 made the cut as "essential"? Search for it here!</p>
                          </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
             </section>
