--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     </div>
                     <p class="lead mb-5">I am a junior developer with a passion for writing! Hire me for all your WordPress or UX needs.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/malloryjoy/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/malloryjoy"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/malloryjoy/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" target="_blank" href="https://github.com/malloryjoy"><i class="fab fa-github"></i></a>
                         <!--a class="social-icon" href="#!"><i class="fab fa-instagram"></i></a-->
-                        <a class="social-icon" href="https://maljoylove.com/"><i class="fab fa-wordpress"></i></a>
+                        <a class="social-icon"  target="_blank" href="https://maljoylove.com/"><i class="fab fa-wordpress"></i></a>
                     </div>
                 </div>
             </section>
@@ -66,7 +66,7 @@
                             <h3 class="mb-0">Sitcom Soulmates</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Javascript</div>
                             <p>Looking for love? This personality quiz will tell you just where to find it.... on your favorite streaming platform. Looking for a best friend? This quiz does that, too!</p>
-                        <a class="button" href="#">Launch Project</a> <a class="button" href="#">View ReadMe</a> <a class="button" href="#">View GitHub</a>
+                        <a class="projbutton" href="/sitcomsoulmates">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                         </div>
 
                     </div>
@@ -75,7 +75,7 @@
                             <h3 class="mb-0">iBod</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Python </div>
                             <p>Inspired by the 75Hard Challenge, this random generator will tell you how you'll work out today. Get ready, get set, go get 'em! </p>
-                            <a class="button" href="#">Launch Project</a> <a class="button" href="#">View ReadMe</a> <a class="button" href="#">View GitHub</a>
+                            <a class="projbutton" href="#">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -84,7 +84,7 @@
                             <div class="subheading mb-3">Uses HTML, CSS, and React.js</div>
                             <p>Have you ever watched a TV show and wished you could dress like one of the characters? This style guide will get you on the 
                                 right track for your next wardrobe update!</p>
-                                <a class="button" href="#">Launch Project</a> <a class="button" href="#">View ReadMe</a> <a class="button" href="#">View GitHub</a>
+                                <a class="projbutton" href="#">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
@@ -94,7 +94,7 @@
                             <p>Every year, critics and film enthusiasts across the globe collaborate on a list of what films of the year deserve a place on 
                                 the list of "1001 Movies to See Before You Die." Wondering if your favorite movie made the cut as "essential"? 
                                 Search for it here!</p>
-                            <a class="button" href="#">Launch Project</a> <a class="button" href="#">View ReadMe</a> <a class="button" href="#">View GitHub</a>
+                            <a class="projbutton" href="#">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                          </div>
                     </div>
                 </div>
@@ -107,13 +107,13 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">User Interface Copy</h3>   
-                            <div><a href="">Call to Action Buttons</a><br /><a href="">Site Navigation Buttons</a></div>   
+                            <div><a href="">Call to Action Buttons</a> | <a href="">Site Navigation Buttons</a></div>   
                         </div> 
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct and Transactional Emails</h3>
-                            <div><a href="">Getting Started with WooCommerce</a><br /><a href="">Accessing Your Wordpress Website</a></div>
+                            <div><a href="">Getting Started with WooCommerce</a> | <a href="">Accessing Your Wordpress Website</a></div>
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                 <div class="portfolio-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
+                    <ul class="list-inline dev-icons language-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
