--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <h3 class="mb-0">Sitcom Soulmates</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Javascript</div>
                             <p>Looking for love? This personality quiz will tell you just where to find it.... on your favorite streaming platform. Looking for a best friend? This quiz does that, too!</p>
-                        <a class="projbutton" href="/sitcomsoulmates">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
+                        <a class="projbutton" target="_blank" href="/sitcomsoulmates">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/datingapp">View GitHub</a>
                         </div>
 
                     </div>
