--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">iBod</h3>
+                            <h3 class="mb-0">myBod</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Python </div>
                             <p>Inspired by the 75Hard Challenge, this random generator will tell you how you'll work out today. Get ready, get set, go get 'em! </p>
                             <a class="projbutton" href="/myBod">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/myBod">View GitHub</a>
