Updated MOBILE CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body id="page-top">
         <aside id="togglebox">
-            <p>Choose Your Style: <button id="defaultsheet" onclick="swapStyleSheet('./css/bootstrap_styles.css');">Default</button> <button id="ellesheet" onclick="swapStyleSheet('./css/elle.css');">Elle</button> <button id="fidisheet" onclick="swapStyleSheet('./css/FiDi.css');">FiDi</button><button id="millissheet" onclick="swapStyleSheet('./css/millis.css');">Millis</button></p>
+            <p>Choose Your Style: <br class="mobile-break"><button id="defaultsheet" onclick="swapStyleSheet('./css/bootstrap_styles.css');">Default</button> <button id="ellesheet" onclick="swapStyleSheet('./css/elle.css');">Elle</button> <button id="fidisheet" onclick="swapStyleSheet('./css/FiDi.css');">FiDi</button><button id="millissheet" onclick="swapStyleSheet('./css/millis.css');">Millis</button></p>
         </aside>
        
         <!-- Navigation-->
