updated copy and links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <a class="projbutton" href="/myBod">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/myBod">View GitHub</a>
                         </div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <!--div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Style Assistant</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and React.js</div>
@@ -106,7 +106,7 @@
                                 Search for it here!</p>
                             <a class="projbutton" href="#">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                          </div>
-                    </div>
+                    </div--s>
                 </div>
             </section>
             <hr class="m-0" />
@@ -117,13 +117,17 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">User Interface Copy</h3>   
-                            <div><a href="">Call to Action Buttons</a> | <a href="">Site Navigation Buttons</a></div>   
+                            <div><a href="https://www.ridgefieldgc.com/" target="_blank">Sample Website 1 </a> | <a href="https://www.mesquitegc.com/" target="_blank">Sample Website 2</a></div>   
                         </div> 
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Direct and Transactional Emails</h3>
-                            <div><a href="">Getting Started with WooCommerce</a> | <a href="">Accessing Your Wordpress Website</a></div>
+                            <div><a href="/introductory-wooCommerce-email.pdf">Getting Started with WooCommerce</a> | <a href="/website-launch-email.pdf">Accessing Your Wordpress Website</a></div>
+                        </div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Internal Documentation</h3>
+                            <div><a href="mailto:malloryjoy13@gmail.com">Available Upon Request</a></div>
                         </div>
                     </div>
                 </div>
