updated with revised div tags

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
                             <h3 class="mb-0">Direct and Transactional Emails</h3>
                             <div><a href="/introductory-wooCommerce-email.pdf">Getting Started with WooCommerce</a> | <a href="/website-launch-email.pdf">Accessing Your Wordpress Website</a></div>
                         </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Internal Documentation</h3>
                             <div><a href="mailto:malloryjoy13@gmail.com">Available Upon Request</a></div>
