adjust section alignment

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 Search for it here!</p>
                             <a class="projbutton" href="#">Launch Project</a> <a class="projbutton" href="#">View ReadMe</a> <a class="projbutton" href="#">View GitHub</a>
                          </div>
-                    </div--s>
+                    </div-->
                 </div>
             </section>
             <hr class="m-0" />
