--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <!--li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li-->
+                        <!--li class="list-inline-item"><i class="fab fa-react"></i></li-->
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-php"></i></li>
                     </ul>
                     <div class="subheading mb-3">Related</div>
                     <ul class="fa-ul mb-0">
