--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            WordPress
+                            WordPress!
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
