--- a/index.html
+++ b/index.html
@@ -144,16 +144,17 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                        <li class="list-inline-item"></li><i class="fa-brands fa-figma"></i>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <!--li class="list-inline-item"><i class="fab fa-react"></i></li-->
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fa-brands fa-php"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-php"></i></li>
                     </ul>
                     <div class="subheading mb-3">Related</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            WordPress!
+                            E-Commerce
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -166,6 +167,10 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Salesforce
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            AWS
                         </li>
                     </ul>
                 </div>
