--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h2 class="mb-5">Websites I've Built</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Sitcom Soulmates</h3>
+                            <h3 class="mb-0">GOLFNOW, NBC SPORTS NEXT</h3>
                             <div class="subheading mb-3">Uses HTML, CSS, and Javascript</div>
                             <p>Looking for love? This personality quiz will tell you just where to find it.... on your favorite streaming platform. Looking for a best friend? This quiz does that, too!</p>
                         <a class="projbutton" target="_blank" href="/sitcomsoulmates">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/datingapp">View GitHub</a>
