Update Website Section

--- a/index.html
+++ b/index.html
@@ -75,17 +75,13 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">GOLFNOW, NBC SPORTS NEXT</h3>
-                            <p>Looking for love? This personality quiz will tell you just where to find it.... on your favorite streaming platform. Looking for a best friend? This quiz does that, too!</p>
-                        <a class="projbutton" target="_blank" href="/sitcomsoulmates">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/datingapp">View GitHub</a>
-                        </div>
-
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">myBod</h3>
-                            <div class="subheading mb-3">Uses HTML, CSS, and Python </div>
-                            <p>Inspired by the 75Hard Challenge, this random generator will tell you how you'll work out today. Get ready, get set, go get 'em! </p>
-                            <a class="projbutton" href="/myBod">Launch Project</a> <a class="projbutton" href="https://github.com/malloryjoy/myBod">View GitHub</a>
+                            <ul>
+                                <li>Site 1</li>
+                                <li>Site 2</li>
+                                <li>Site 3</li>
+                                <li>Site 4</li>
+                                <li>Site 5</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
