--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">GOLFNOW, NBC SPORTS NEXT</h3>
+                            &nbsp;
                             <ul>
                                 <li>Site 1</li>
                                 <li>Site 2</li>
@@ -82,6 +83,8 @@
                                 <li>Site 4</li>
                                 <li>Site 5</li>
                             </ul>
+                            &nbsp; 
+                            <a aria-label="First Site" class="projbutton" href="#">Site 1 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 2 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 3 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 4 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 5 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 6 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 7 </a> |
                         </div>
                     </div>
                 </div>
