--- a/index.html
+++ b/index.html
@@ -74,17 +74,10 @@
                     <h2 class="mb-5">Websites I've Built</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">GOLFNOW, NBC SPORTS NEXT</h3>
+                            <h3 class="mb-0">NBC SPORTS NEXT</h3>
                             &nbsp;
-                            <ul>
-                                <li>Site 1</li>
-                                <li>Site 2</li>
-                                <li>Site 3</li>
-                                <li>Site 4</li>
-                                <li>Site 5</li>
-                            </ul>
-                            &nbsp; 
-                            <a aria-label="First Site" class="projbutton" href="#">Site 1 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 2 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 3 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 4 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 5 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 6 </a> | <a aria-label="First Site" class="projbutton" href="#">Site 7 </a> |
+                             
+                            <a aria-label="Providence Golf Club" target="_blank" class="projbutton" href="https://www.providencegolfclub.com">Providence Golf Club </a>  | <a aria-label="Seaview Golf" class="projbutton" href="https://www.seaviewgolf.com/" target="_blank">Seaview Golf </a>  | <a aria-label="Indian River Preserve" class="projbutton" href="https://www.indianriverpreservegolfclub.com">Indian River Preserve  </a>  | <a aria-label="Southern Woods Golf" class="projbutton" href="https://www.southernwoodsgc.com">Southern Woods Golf</a>  | <a aria-label="First Site" class="projbutton" href="#">Site 5 </a>  | <a aria-label="First Site" class="projbutton" href="#">Site 6 </a>  | <a aria-label="First Site" class="projbutton" href="#">Site 7 </a> |
                         </div>
                     </div>
                 </div>
