--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">NBC SPORTS NEXT</h3>
                             <p>&nbsp;</p>
-                                <a aria-label="Providence Golf Club" target="_blank" class="projbutton" href="https://www.providencegolfclub.com">Providence Golf Club </a><span style="padding-left: 10px"></span><a aria-label="Seaview Golf" class="projbutton" href="https://www.seaviewgolf.com/" target="_blank">Seaview Golf </a> <span style="padding-left: 10px"></span> <a aria-label="Indian River Preserve" class="projbutton" href="https://www.indianriverpreservegolfclub.com">Indian River Preserve  </a> <span style="padding-left: 10px"></span> <a aria-label="Southern Woods Golf" class="projbutton" href="https://www.southernwoodsgc.com">Southern Woods Golf</a>  
+                                <a aria-label="Providence Golf Club" target="_blank" class="projbutton" href="https://www.providencegolfclub.com">Providence Golf Club </a><span style="padding-left: 10px"></span><a aria-label="Seaview Golf" class="projbutton" href="https://www.seaviewgolf.com/" target="_blank">Seaview Golf </a> <span style="padding-left: 10px"></span> <br class="mobile-break"><a aria-label="Indian River Preserve" class="projbutton" href="https://www.indianriverpreservegolfclub.com">Indian River Preserve  </a> <span style="padding-left: 10px"></span> <a aria-label="Southern Woods Golf" class="projbutton" href="https://www.southernwoodsgc.com">Southern Woods Golf</a>  
                             
                         </div>
                     </div>
