--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                             <p>&nbsp;</p>
                                 <a aria-label="Providence Golf Club" target="_blank" class="projbutton" href="https://www.providencegolfclub.com">Providence Golf Club </a><span style="padding-left: 10px"></span><a aria-label="Seaview Golf" class="projbutton" href="https://www.seaviewgolf.com/" target="_blank">Seaview Golf </a> <span style="padding-left: 10px"></span> 
                                 <br class="mobile-break"><div id="bim"></div><a aria-label="Indian River Preserve" class="projbutton" href="https://www.indianriverpreservegolfclub.com" target="_blank">Indian River Preserve  </a> <span style="padding-left: 10px"></span> <a aria-label="Southern Woods Golf" class="projbutton" href="https://www.southernwoodsgc.com" target="_blank">Southern Woods Golf</a>  
+                                <br class="mobile-break"><div id="bim"></div><a aria-label="GolfNow Template Library" class="projbutton" href="https://golf.nbcsportsnext.com/template-library/" target="_blank">NBC Sports Next Template Library</a>
                             
                         </div>
                     </div>
