Added link to mockup to portfolio section of Wordpress Templates

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                <table class="the-middle">
                    <tbody>
                    <tr><th>Wordpress Templates</th></tr>
-                   <tr><td><a href="https://www.ode.malloryjoy.dev" target="_blank" aria-label="Ode Template (opens in a new tab)">Ode</a></td></tr>
+                   <tr><td><a href="https://www.figma.com/proto/zIK1zLdpK11pJd4Ai7c9E0/WORDPRESS-DESIGNS?node-id=232-6188&t=x8bsyFclMBq4PSKv-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=99%3A514" target="_blank" aria-label="Ode Template (opens in a new tab)">Ode</a></td></tr>
                    <tr><td><a href="https://www.strider.malloryjoy.dev/" target="_blank" aria-label="Strider Template (opens in a new tab)">Strider</a></td></tr>
                    <tr><td><a href="https://www.aurora.malloryjoy.dev/" target="_blank" aria-label="Aurora Template (opens in a new tab)">Aurora</a></td></tr>
                    <tr><td><a href="https://www.amity.malloryjoy.dev/" target="_blank" aria-label="Amity Template (opens in a new tab)">Amity</a></td></tr>
